<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eee"
    tools:context="com.lorenzovngl.domina.activities.RulesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rules_intro"
            android:textColor="@color/colorTextDark"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/men"
            android:textSize="20dp"
            android:layout_margin="10dp"
            android:textColor="@color/colorPrimaryDarkClassic"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rules_pawns"
            android:textColor="@color/colorTextDark"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kings"
            android:textSize="20dp"
            android:layout_margin="10dp"
            android:textColor="@color/colorPrimaryDarkClassic"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rules_kings"
            android:textColor="@color/colorTextDark"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/eating"
            android:textSize="20dp"
            android:layout_margin="10dp"
            android:textColor="@color/colorPrimaryDarkClassic"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rules_eating"
            android:textColor="@color/colorTextDark"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/multiple_eating"
            android:textSize="20dp"
            android:layout_margin="10dp"
            android:textColor="@color/colorPrimaryDarkClassic"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rules_multiple_eating"
            android:textColor="@color/colorTextDark"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/end_of_the_game"
            android:textSize="20dp"
            android:layout_margin="10dp"
            android:textColor="@color/colorPrimaryDarkClassic"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rules_end_of_game"
            android:textColor="@color/colorTextDark"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/close"
            android:id="@+id/button_close"/>

    </LinearLayout>

</ScrollView>
