<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/player_1"
        android:textColor="@color/colorPrimaryDarkClassic" />

    <EditText
        android:id="@+id/player_one_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        app:backgroundTint="@color/colorPrimaryDarkClassic" />

    <TextView
        android:id="@+id/textview_player_two_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/player_2"
        android:textColor="@color/colorPrimaryDarkClassic" />

    <EditText
        android:id="@+id/player_two_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        app:backgroundTint="@color/colorPrimaryDarkClassic" />

    <!--<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textview_first_move"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/first_move"
            android:textColor="@color/colorPrimaryDark" />

        <RadioGroup
            android:id="@+id/radio_first_move"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_player1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player_1"
                android:textColor="@color/colorPrimaryDark"
                app:buttonTint="@color/colorPrimaryDark" />

            <RadioButton
                android:id="@+id/radio_player2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player_2"
                android:textColor="@color/colorPrimaryDark"
                app:buttonTint="@color/colorPrimaryDark" />

        </RadioGroup>

    </LinearLayout>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/radio_difficulty_layout">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/difficulty"
            android:textColor="@color/colorPrimaryDarkClassic" />

        <RadioGroup
            android:id="@+id/radio_difficulty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_easy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/easy"
                android:textColor="@color/colorPrimaryDarkClassic"
                app:buttonTint="@color/colorPrimaryDarkClassic" />

            <RadioButton
                android:id="@+id/radio_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/medium"
                android:textColor="@color/colorPrimaryDarkClassic"
                app:buttonTint="@color/colorPrimaryDarkClassic" />

            <RadioButton
                android:id="@+id/radio_hard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hard"
                android:textColor="@color/colorPrimaryDarkClassic"
                app:buttonTint="@color/colorPrimaryDarkClassic" />

        </RadioGroup>

    </LinearLayout>

</LinearLayout>