<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient_menu_classic"
    tools:context="com.lorenzovngl.domina.activities.MenuActivity"
    android:id="@+id/activity_menu_container">

    <ImageView
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_margin="20dp"
        android:src="@drawable/trophy"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/trophy_icon"/>

    <ImageView
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_margin="20dp"
        android:src="@drawable/settings"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/settings_icon"/>

    <ImageView
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_margin="20dp"
        android:src="@drawable/info"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:id="@+id/info_icon"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/app_icon"
            android:layout_marginTop="0dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/app_name"
            android:gravity="center"
            android:textColor="#fff"
            android:textSize="50dp" />

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="1 VS CPU"
            android:padding="20dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:id="@+id/button_1vsCPU"/>

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="1 VS 1"
            android:padding="20dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:id="@+id/button_1vs1"/>

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/resume_game"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:padding="20dp"
            android:id="@+id/button_resume"/>

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/how_to_play"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:padding="20dp"
            android:id="@+id/button_how_to_play"/>

    </LinearLayout>

</RelativeLayout>
