<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eee"
    android:orientation="vertical"
    tools:context="com.lorenzovngl.domina.activities.MainActivity">

    <RelativeLayout
        android:id="@+id/board_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1">

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/points_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/board_layout"
        android:background="@drawable/gradient_menu_classic">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:layout_gravity="center"
            android:background="@drawable/rect_one_classic"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="5dp"
            android:id="@+id/player_one_board">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageview_pl1"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginRight="5dp"
                    android:src="@drawable/player_dark" />

                <TextView
                    android:id="@+id/textview_pl1_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/player_1"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/colorTextDark" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="0dp"
                    android:src="@drawable/circle_one_classic"
                    android:id="@+id/men_one_counter_iv"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/men"
                    android:textColor="@color/colorTextDark" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=": "
                    android:textColor="@color/colorTextDark" />

                <TextView
                    android:id="@+id/one_pawns_counter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="12"
                    android:textColor="@color/colorTextDark" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="0dp"
                    android:src="@drawable/crown_one_classic"
                    android:id="@+id/kings_one_counter_iv"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kings"
                    android:textColor="@color/colorTextDark" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=": "
                    android:textColor="@color/colorTextDark" />

                <TextView
                    android:id="@+id/one_ladies_counter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textColor="@color/colorTextDark" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:background="@drawable/rect_two_classic"
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            android:id="@+id/player_two_board">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end|center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textview_pl2_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/player_2"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/colorTextLight" />

                <ImageView
                    android:id="@+id/imageview_pl2"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="5dp"
                    android:src="@drawable/cpu" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="0dp"
                    android:src="@drawable/circle_two_classic"
                    android:id="@+id/men_two_counter_iv"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/men"
                    android:textColor="@color/colorTextLight" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=": "
                    android:textColor="@color/colorTextLight" />

                <TextView
                    android:id="@+id/two_pawns_counter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="12"
                    android:textColor="@color/colorTextLight" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="0dp"
                    android:src="@drawable/crown_two_classic"
                    android:id="@+id/kings_two_counter_iv"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kings"
                    android:textColor="@color/colorTextLight" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=": "
                    android:textColor="@color/colorTextLight" />

                <TextView
                    android:id="@+id/two_ladies_counter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textColor="@color/colorTextLight" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/points_layout"
        android:gravity="center"
        android:layout_marginBottom="15dp">

        <ImageView
            android:id="@+id/player_active"
            android:layout_width="100dp"
            android:layout_height="7dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:src="@drawable/rect_rounded_active" />

    </LinearLayout>

</RelativeLayout>
